NGA-2: fix for secondary column overlapping with global footer

--- a/app/styles/components/_page.scss
+++ b/app/styles/components/_page.scss
@@ -397,6 +397,13 @@
 		overflow: hidden;
 	}
 
+	#detailSecondaryColumn.sticky {
+		.thumbnail_wrap .tag {
+			top: 40px;
+			left: 15px;
+		}
+	}
+
 	#detailTabContentNav {
 		clear: both;
 		overflow: hidden;
